--- a/home.html
+++ b/home.html
@@ -7,6 +7,20 @@
     <title>tour guilde</title>
 </head>
 <body>
-    
+    <!-- FOOTER START -->
+    <footer>
+        <section>
+            <ul>
+                <li><a href="#" class="fa-brands fa-twitter"></a></li>
+                <li><a href="#" class="fa-brands fa-facebook-f"></a></li>
+                <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                <li><a href="#" class="fa-brands fa-instagram"></a></li>
+            </ul>
+            <p>
+                Copyright &copy; 2035 Tour Guide
+            </p>
+        </section>
+    </footer>
+    <!-- FOOTER END -->
 </body>
 </html>
