header on progress

--- a/home.html
+++ b/home.html
@@ -7,6 +7,15 @@
     <title>tour guilde</title>
 </head>
 <body>
+    <!--Header-->
+    <header>
+        <video src="/video/production ID_4133012.mp4" autoplay loop muted></video>
+        <article>
+            <h1>Travel with us</h1>
+            <h2>some other message</h2>
+        </article>
+    </header>
+    <!--Header end-->
     <!-- FOOTER START -->
     <footer>
         <section>
