added some details to header

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <title>tour guilde</title>
 </head>
 <body>
@@ -11,9 +12,16 @@
     <header>
         <video src="/video/production ID_4133012.mp4" autoplay loop muted></video>
         <article>
-            <h1>Travel with us</h1>
-            <h2>some other message</h2>
+            <h1>Tour Guide</h1>
+            <h2>Tour 3 countries with us!</h2>
         </article>
+        <section>
+            <form action="#" method="post">
+                <input type="search" id="search" name="search">
+                <input type="submit" value="&#128269;">
+            </form>
+        </section>
+        <a href="#">Join us!</a>
     </header>
     <!--Header end-->
     <!-- FOOTER START -->
