mobile nav scss is done

--- a/korea.html
+++ b/korea.html
@@ -20,7 +20,9 @@
                 <li><a href="#summaryColombia">About Colombia</a></li>
                 <li><a href="#summaryKorea">About Korea</a></li>
             </ul>
-            <i class="fa-solid fa-globe"></i>
+            <aside>
+                <i class="fa-solid fa-earth-americas"></i>
+            </aside>
             <ul>
                 <li><a href="home.html">HOME</a></li>
                 <li><a href="brazil.html">BRAZIL</a></li>
@@ -29,18 +31,20 @@
             </ul>
             <details>
                 <summary class="fa-solid fa-bars"></summary>
-                <ul>
-                    <li><a href="#intro">Welcome</a></li>
-                    <li><a href="#summaryBrazil">About Brazil</a></li>
-                    <li><a href="#summaryColombia">About Colombia</a></li>
-                    <li><a href="#summaryKorea">About Korea</a></li>
-                </ul>
-                <ul>
-                    <li><a href="home.html">HOME</a></li>
-                    <li><a href="brazil.html">BRAZIL</a></li>
-                    <li><a href="colombia.html">COLOMBIA</a></li>
-                    <li><a href="korea.html">KOREA</a></li>
-                </ul>
+                <article>
+                    <ul>
+                        <li><a href="#intro">Welcome</a></li>
+                        <li><a href="#summaryBrazil">About Brazil</a></li>
+                        <li><a href="#summaryColombia">About Colombia</a></li>
+                        <li><a href="#summaryKorea">About Korea</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="home.html">HOME</a></li>
+                        <li><a href="brazil.html">BRAZIL</a></li>
+                        <li><a href="colombia.html">COLOMBIA</a></li>
+                        <li><a href="korea.html">KOREA</a></li>
+                    </ul>
+                </article>
             </details>
         </nav>
         <!-- NAV END -->
