--- a/colombia.html
+++ b/colombia.html
@@ -12,8 +12,9 @@
     <header>
         <video src="/video/production ID_4133012.mp4" autoplay loop muted></video>
         <article>
-            <h1>Tour Guide</h1>
-            <h2>Tour 3 countries with us!</h2>
+            <h1>COLOMBIA</h1>
+            <h2>some insightful text</h2>
+            <h3>some other text</h3>
         </article>
         <section>
             <form action="#" method="post">
@@ -21,9 +22,30 @@
                 <input type="submit" value="&#128269;">
             </form>
         </section>
-        <a href="#">Join us!</a>
+        <a href="#">more info</a>
     </header>
     <!--Header end-->
+    <main class="cmain">
+        <section class="cleft" id="cleft">
+            <section class="place" id="place">
+                 
+            </section>
+            <section class="fair" id="fair">
+
+            </section>
+            <section class="food" id="food">
+
+            </section>
+        </section>
+        <section class="cright" id="cright">
+            <section class="form" id="form">
+
+            </section>
+            <section class="faq" id="faq">
+                
+            </section>
+        </section>
+    </main>
     <!-- FOOTER START -->
     <footer>
         <section>
