Korea HTML Setting

--- a/korea.html
+++ b/korea.html
@@ -47,22 +47,258 @@
                 </article>
             </details>
         </nav>
-        <!-- NAV END -->
-        <!--Header-->
-        <header>
-            <video
-                src="/video/production ID_4133012.mp4"
-                autoplay
-                loop
-                muted
-            ></video>
-            <article>
-                <h1>Travel with us</h1>
-                <h2>some other message</h2>
-            </article>
+        <!-- HEADER -->
+        <header class="kHeader">
+            <section>
+                <article>
+                    <h1>KOREA</h1>
+                    <h2>Tour 3 countries with us!</h2>
+                </article>
+            </section>
         </header>
-        <!--Header end-->
-        <!-- FOOTER START -->
+        <!-- MAIN -->
+        <main class="kMain">
+            <section class="kIntro">
+                <article>
+                    <h3>Welcome to South Korea!</h3>
+                    <h4>
+                        Did you know that the Republic of Korea is an armistice
+                        state?
+                    </h4>
+                </article>
+                <section>
+                    <figure>
+                        <img src="./img/korea/map1.png" alt="korea-map" />
+                        <figcaption>
+                            <p>
+                                After the armistice of the Korean War, it was
+                                divided into South and North Korea. The Korean
+                                War officially leads to a "cease of war," not an
+                                "end of war," but it is actually an end of war
+                                because there has been no battle for 70 years.
+                            </p>
+                            <p>
+                                As you can see on the map, Republic of Korea is
+                                located south of the ceasefire line. The capital
+                                city is Seoul.
+                            </p>
+                        </figcaption>
+                    </figure>
+                </section>
+            </section>
+            <section class="kSeoul">
+                <article>
+                    <h3>Travel to SEOUL!</h3>
+                    <h4>Top 4 Best Place To Visit</h4>
+                </article>
+                <section>
+                    <aside>
+                        <figure>
+                            <img src="" alt="hongdae-img" />
+                            <figcaption>
+                                <h3>HongDae</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <h3>Want to feel young</h3>
+                    </aside>
+                    <aside>
+                        <figure>
+                            <img src="" alt="myeongdong-img" />
+                            <figcaption>
+                                <h3>MyeongDong</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <h3>Shopping and taste street food</h3>
+                    </aside>
+                    <aside>
+                        <figure>
+                            <img src="" alt="anguk-img" />
+                            <figcaption>
+                                <h3>Anguk</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <h3>Want to feel the Korean atmosphere</h3>
+                    </aside>
+                    <aside>
+                        <figure>
+                            <img src="" alt="hanriver-img" />
+                            <figcaption>
+                                <h3>Han River</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <h3>Have a picnic</h3>
+                    </aside>
+                </section>
+            </section>
+            <section class="kJeju">
+                <article>
+                    <h3>JEJU ISLAND</h3>
+                    <h4>Special Relax Place To Go</h4>
+                </article>
+                <section>
+                    <figure>
+                        <img src="" alt="jeju-img1" />
+                        <img src="" alt="jeju-img2" />
+                        <img src="" alt="jeju-img3" />
+                    </figure>
+                    <article>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Iusto ex quisquam dicta praesentium odit, eum
+                            dolorem recusandae reiciendis cum at!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Voluptates ad magnam voluptatem obcaecati quis
+                            nobis suscipit doloribus animi consectetur possimus?
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Ad, quasi eligendi! Nisi vitae illo architecto
+                            debitis, saepe vero blanditiis illum.
+                        </p>
+                        <a href="#">READ MORE</a>
+                    </article>
+                </section>
+            </section>
+            <section class="kRecommendation">
+                <article>
+                    <h3>MUST EAT AND DRINK</h3>
+                    <h4>Food and Alcohol Recommendations that you must try!</h4>
+                </article>
+                <section>
+                    <article class="kFood">
+                        <figure>
+                            <img src="" alt="tteokbokki-img" />
+                            <figcaption>
+                                <h3>Tteokbokki</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="" alt="samgyeopsal-img" />
+                            <figcaption>
+                                <h3>Samgyeopsal</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="" alt="bibimbap-img" />
+                            <figcaption>
+                                <h3>Bibimbap</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                    <article class="kAlcohol">
+                        <figure>
+                            <img src="" alt="soju-img" />
+                            <figcaption>
+                                <h3>Soju</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="" alt="makgeolli-img" />
+                            <figcaption>
+                                <h3>Makgeolli</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="" alt="bokbunja-img" />
+                            <figcaption>
+                                <h3>Bokbunja-ju</h3>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Voluptatibus ut est at
+                                    eaque enim sunt accusamus, exercitationem
+                                    neque eius nesciunt.
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                </section>
+            </section>
+            <section class="kContact">
+                <article>
+                    <h3>CONTACT US FOR MORE</h3>
+                    <h4>If you have any questions, please contact us!</h4>
+                </article>
+                <section>
+                    <form action="thankyou.html" method="post">
+                        <input
+                            type="text"
+                            name="name"
+                            id="name"
+                            placeholder="Name"
+                        />
+                        <input
+                            type="email"
+                            name="email"
+                            id="email"
+                            placeholder="Email"
+                        />
+                        <textarea
+                            name="message"
+                            id="message"
+                            placeholder="Message"
+                        ></textarea>
+                        <input type="submit" value="Send Message" />
+                    </form>
+                </section>
+            </section>
+        </main>
+        <!-- FOOTER -->
         <footer>
             <section>
                 <ul>
@@ -74,6 +310,5 @@
                 <p>Copyright &copy; 2035 Tour Guide</p>
             </section>
         </footer>
-        <!-- FOOTER END -->
     </body>
 </html>
