Korea nav fixed

--- a/korea.html
+++ b/korea.html
@@ -15,10 +15,11 @@
         <!-- NAV -->
         <nav>
             <ul>
-                <li><a href="#intro">Welcome</a></li>
-                <li><a href="#summaryBrazil">About Brazil</a></li>
-                <li><a href="#summaryColombia">About Colombia</a></li>
-                <li><a href="#summaryKorea">About Korea</a></li>
+                <li><a href="#kIntro">Welcome</a></li>
+                <li><a href="#kSeoul">Seoul</a></li>
+                <li><a href="#kJeju">Jeju</a></li>
+                <li><a href="#kRecommendation">Must Eat & Drink</a></li>
+                <li><a href="#kContact">Contact</a></li>
             </ul>
             <aside>
                 <i class="fa-solid fa-earth-americas"></i>
@@ -33,10 +34,11 @@
                 <summary class="fa-solid fa-bars"></summary>
                 <article>
                     <ul>
-                        <li><a href="#intro">Welcome</a></li>
-                        <li><a href="#summaryBrazil">About Brazil</a></li>
-                        <li><a href="#summaryColombia">About Colombia</a></li>
-                        <li><a href="#summaryKorea">About Korea</a></li>
+                        <li><a href="#kIntro">Welcome</a></li>
+                        <li><a href="#kSeoul">Seoul</a></li>
+                        <li><a href="#kJeju">Jeju</a></li>
+                        <li><a href="#kRecommendation">Must Eat & Drink</a></li>
+                        <li><a href="#kContact">Contact</a></li>
                     </ul>
                     <ul>
                         <li><a href="home.html">HOME</a></li>
@@ -58,7 +60,7 @@
         </header>
         <!-- MAIN -->
         <main class="kMain">
-            <section class="kIntro">
+            <section class="kIntro" id="kIntro">
                 <article>
                     <h3>Welcome to South Korea!</h3>
                     <h4>
@@ -86,7 +88,7 @@
                     </figure>
                 </section>
             </section>
-            <section class="kSeoul">
+            <section class="kSeoul" id="kSeoul">
                 <article>
                     <h3>Travel to SEOUL!</h3>
                     <h4>Top 4 Best Place To Visit</h4>
@@ -154,7 +156,7 @@
                     </aside>
                 </section>
             </section>
-            <section class="kJeju">
+            <section class="kJeju" id="kJeju">
                 <article>
                     <h3>JEJU ISLAND</h3>
                     <h4>Special Relax Place To Go</h4>
@@ -185,7 +187,7 @@
                     </article>
                 </section>
             </section>
-            <section class="kRecommendation">
+            <section class="kRecommendation" id="kRecommendation">
                 <article>
                     <h3>MUST EAT AND DRINK</h3>
                     <h4>Food and Alcohol Recommendations that you must try!</h4>
@@ -269,7 +271,7 @@
                     </article>
                 </section>
             </section>
-            <section class="kContact">
+            <section class="kContact" id="kContact">
                 <article>
                     <h3>CONTACT US FOR MORE</h3>
                     <h4>If you have any questions, please contact us!</h4>
