added food section html

--- a/colombia.html
+++ b/colombia.html
@@ -39,7 +39,7 @@
                  </article>
                  <section class="place1">
                     <aside>
-                        La ciudad Perdida
+                        Lost City
                     </aside>
                     <figure>
                         <img src="/img/colombia/perdida.jpg" alt="pciture-1">
@@ -66,7 +66,7 @@
                     <figure>
                         <img src="/img/colombia/catedra.jpeg" alt="picture-3">
                         <figcaption>
-                            
+
                         </figcaption>
                     </figure>
                  </section>
@@ -108,6 +108,36 @@
                             food
                         </h2>
                     </article>
+                    <section class="fList">
+                        <aside>
+                            <figure>
+                                <img src="/img/colombia/arepas-colombianas.jpg" alt="food-1">
+                                <figcaption>
+                                    <h4>Arepas</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aut doloremque vero laborum veritatis molestiae nihil voluptas. Saepe, culpa distinctio?</p>
+                                </figcaption>
+                            </figure>
+                        </aside>
+                        <aside>
+                            <figure>
+                                <img src="/img/colombia/bandejapaisa.jpg" alt="food-2">
+                                <figcaption>
+                                    <h4>Bandeja Paisa</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aut doloremque vero laborum veritatis molestiae nihil voluptas. Saepe, culpa distinctio?</p>
+                                </figcaption>
+                            </figure>
+                        </aside>
+                        <aside>
+                            <figure>
+                                <img src="/img/colombia/ajiaco.jpg" alt="food-3">
+                                <figcaption>
+                                    <h4>Arepas</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aut doloremque vero laborum veritatis molestiae nihil voluptas. Saepe, culpa distinctio?</p>
+                                </figcaption>
+                            </figure>
+                        </aside>
+                    </section>
+                    <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
                 </aside>
             </section>
         </section>
