JB footer SCSS, and HTML updated

--- a/brazil.html
+++ b/brazil.html
@@ -5,8 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brazil Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <!-- NAV START -->
+    <nav>
+        <ul>
+            <li><a href="#summary">Summary</a></li>
+            <li><a href="#culture">Culture</a></li>
+            <li><a href="#activities">Activities</a></li>
+            <li><a href="#cities">Cities</a></li>
+            <li><a href="#biomes">Biomes</a></li>
+        </ul>
+        <aside>
+            <i class="fa-solid fa-earth-americas"></i>
+        </aside>
+        <ul>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="brazil.html">BRAZIL</a></li>
+            <li><a href="colombia.html">COLOMBIA</a></li>
+            <li><a href="korea.html">KOREA</a></li>
+        </ul>
+        <details>
+            <summary class="fa-solid fa-bars"></summary>
+            <article>
+                <ul>
+                    <li><a href="#summary">Summary</a></li>
+                    <li><a href="#culture">Culture</a></li>
+                    <li><a href="#activities">Activities</a></li>
+                    <li><a href="#cities">Cities</a></li>
+                    <li><a href="#biomes">Biomes</a></li>
+                </ul>
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="brazil.html">BRAZIL</a></li>
+                    <li><a href="colombia.html">COLOMBIA</a></li>
+                    <li><a href="korea.html">KOREA</a></li>
+                </ul>
+            </article>
+        </details>
+    </nav>
+    <!-- NAV END -->
+    <!-- HEADER START -->
+    <header>
+        <article>
+            <h1>BRAZIL</h1>
+            <h2>some insightful text</h2>
+            <h3>some other text</h3>
+        </article>
+        <a href="#">more info</a>
+    </header>
+    <!-- HEADER END -->
     <!-- MAIN START -->
     <main>
         <!-- GENERAL SECTION START -->
