--- a/colombia.html
+++ b/colombia.html
@@ -7,6 +7,7 @@
     <title>Colombia</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="icon" href="/img/colombia/colombia.png">
 </head>
 <body>
     <!--Header-->
@@ -44,7 +45,7 @@
                     <figure>
                         <img src="/img/colombia/perdida.jpg" alt="pciture-1">
                         <figcaption>
-
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo ullam similique maiores quidem voluptatem inventore quae odit nulla distinctio?</p>
                         </figcaption>
                     </figure>
                  </section>
@@ -55,7 +56,7 @@
                     <figure>
                         <img src="/img/colombia/santuario.jpg" alt="picture-2">
                         <figcaption>
-                            
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo ullam similique maiores quidem voluptatem inventore quae odit nulla distinctio?</p>
                         </figcaption>
                     </figure>
                  </section>
@@ -66,7 +67,7 @@
                     <figure>
                         <img src="/img/colombia/catedra.jpeg" alt="picture-3">
                         <figcaption>
-
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo ullam similique maiores quidem voluptatem inventore quae odit nulla distinctio?</p>
                         </figcaption>
                     </figure>
                  </section>
@@ -77,7 +78,7 @@
                     <figure>
                         <img src="/img/colombia/cristales.jpg" alt="picture-4">
                         <figcaption>
-                            
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo ullam similique maiores quidem voluptatem inventore quae odit nulla distinctio?</p>
                         </figcaption>
                     </figure>
                  </section>
@@ -89,6 +90,32 @@
                             festival
                         </h2>
                     </article>
+                    <section class="festList">
+                        <figure>
+                            <img src="/img/colombia/carnival-mask.png" alt="fest-1">
+                            <figcaption>
+                                <h3>Lorem, ipsum.</h3>
+                                <h4>Lorem, ipsum dolor.</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, numquam.</p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="/img/colombia/mexican-hat.png" alt="fest-2">
+                            <figcaption>
+                                <h3>Lorem, ipsum.</h3>
+                                <h4>Lorem, ipsum dolor.</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, numquam.</p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="/img/colombia/parade.png" alt="fest-3">
+                            <figcaption>
+                                <h3>Lorem, ipsum.</h3>
+                                <h4>Lorem, ipsum dolor.</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, numquam.</p>
+                            </figcaption>
+                        </figure>
+                    </section>
                 </aside>
                 <section>
                     <figure>
@@ -108,7 +135,7 @@
                             food
                         </h2>
                     </article>
-                    <section class="fList">
+                    <section class="foodList">
                         <aside>
                             <figure>
                                 <img src="/img/colombia/arepas-colombianas.jpg" alt="food-1">
@@ -171,7 +198,7 @@
                         <option value="company">Company</option>
                         <option value="personal">Personal Use</option>
                     </select>
-                    <label for="conditions">I Acknowledge That I Have Read And Understand The Terms And Conditions</label>
+                    <label for="conditions">I Acknowledge That I Have Read And Understand The <a href="#">Terms</a> And <a href="">Conditions</a> </label>
                     <input type="checkbox" id="conditions" name="conditions">
                     <input type="submit" value="Subscribe!">
                 </form>
