--- a/brazil.html
+++ b/brazil.html
@@ -14,8 +14,8 @@
         <ul>
             <li><a href="#summary">Summary</a></li>
             <li><a href="#culture">Culture</a></li>
-            <li><a href="#activities">Activities</a></li>
-            <li><a href="#cities">Cities</a></li>
+            <li><a href="#activities">Tourist Activities</a></li>
+            <li><a href="#cities">Touristic Cities</a></li>
             <li><a href="#biomes">Biomes</a></li>
         </ul>
         <aside>
@@ -33,8 +33,8 @@
                 <ul>
                     <li><a href="#summary">Summary</a></li>
                     <li><a href="#culture">Culture</a></li>
-                    <li><a href="#activities">Activities</a></li>
-                    <li><a href="#cities">Cities</a></li>
+                    <li><a href="#activities">Tourist Activities</a></li>
+                    <li><a href="#cities">Touristic Cities</a></li>
                     <li><a href="#biomes">Biomes</a></li>
                 </ul>
                 <ul>
@@ -62,7 +62,7 @@
         <!-- GENERAL SECTION START -->
         <section>
             <!-- SECTION SUMMARY START -->
-            <section class="summary">
+            <section class="summary" id="summary">
                 <h3>SUMMARY</h3>
                 <article>
                     <p>
@@ -75,7 +75,7 @@
             </section>
             <!-- SECTION SUMMARY END -->
             <!-- SECTION CULTURE START -->
-            <section class="culture">
+            <section class="culture" id="culture">
                 <h3>CULTURE</h3>
                 <article>
                     <figure>
@@ -109,7 +109,7 @@
             </section>
             <!-- SECTION CULTURE END -->
             <!-- SECTION TOURIST ACTIVITIES START -->
-            <section class="activities">
+            <section class="activities" id="activities">
                 <h3>TOURIST ACTIVITIES</h3>
                 <article>
                     <figure>
@@ -142,7 +142,7 @@
             </section>
             <!-- SECTION TOURIST ACTIVITIES END -->
             <!-- SECTION TOURISTIC CITIES START -->
-            <section class="cities">
+            <section class="cities" id="cities">
                 <h3>TOURISTIC CITIES</h3>
                 <article>
                     <figure>
@@ -191,7 +191,7 @@
             </section>
             <!-- SECTION TOURISTIC CITIES END -->
             <!-- SECTION BIOMES START -->
-            <section class="biomes">
+            <section class="biomes" id="biomes">
                 <h3>Biomes</h3>
                 <aside>
                     <p>
