JB biomes SCSS and HTML updated

--- a/brazil.html
+++ b/brazil.html
@@ -51,8 +51,7 @@
     <header>
         <article>
             <h1>BRAZIL</h1>
-            <h2>some insightful text</h2>
-            <h3>some other text</h3>
+            <h2>A Tropical Country</h2>
         </article>
         <a href="#">more info</a>
     </header>
@@ -90,7 +89,7 @@
                     <figure>
                         <img src="/img/brazil/Cururu-e-siriri.jpg" alt="pic-02">
                         <figcaption>
-                            <h4>Music and Dance The Best Rhythms</h4>
+                            <h4>Music and Dance, The Best Rhythms</h4>
                             <p>
                                 Brazilian music and dance are very diverse and rich in cultural traditions that reflect the influence of various ethnicities, such as African, European and indigenous. Some examples are, Samba, Bossa Nova, Forró, Axé, Sertanejo. These are just a few examples of Brazil's musical and dance diversity. Brazilian music and dance is an important part of the country's culture and is enjoyed around the world.
                             </p>
@@ -203,7 +202,7 @@
                 <article>
                     <figure>
                         <h5>AMAZÔNIA</h5>
-                        <img src="/img/amazonia-2.jpeg" alt="pic-13">
+                        <img src="/img/brazil/amazonia-2.jpeg" alt="pic-13">
                         <figcaption>
                             <p>
                                 It is the largest biome in Brazil and is home to more than 2,500 species of trees and 30,000 plants.
