--- a/colombia.html
+++ b/colombia.html
@@ -10,6 +10,41 @@
     <link rel="icon" href="/img/colombia/colombia.png">
 </head>
 <body>
+    <!--NAV-->
+    <nav>
+        <ul>
+            <li><a href="#intro">Welcome</a></li>
+            <li><a href="#summaryBrazil">About Brazil</a></li>
+            <li><a href="#summaryColombia">About Colombia</a></li>
+            <li><a href="#summaryKorea">About Korea</a></li>
+        </ul>
+        <aside>
+            <i class="fa-solid fa-earth-americas"></i>
+        </aside>
+        <ul>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="brazil.html">BRAZIL</a></li>
+            <li><a href="colombia.html">COLOMBIA</a></li>
+            <li><a href="korea.html">KOREA</a></li>
+        </ul>
+        <details>
+            <summary class="fa-solid fa-bars"></summary>
+            <article>
+                <ul>
+                    <li><a href="#intro">Welcome</a></li>
+                    <li><a href="#summaryBrazil">About Brazil</a></li>
+                    <li><a href="#summaryColombia">About Colombia</a></li>
+                    <li><a href="#summaryKorea">About Korea</a></li>
+                </ul>
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="brazil.html">BRAZIL</a></li>
+                    <li><a href="colombia.html">COLOMBIA</a></li>
+                    <li><a href="korea.html">KOREA</a></li>
+                </ul>
+            </article>
+        </details>
+    </nav>
     <!--Header-->
     <header>
         <video src="/video/production ID_4133012.mp4" autoplay loop muted></video>
