JB main HTML base is done

--- a/home.html
+++ b/home.html
@@ -60,6 +60,56 @@
             <a href="#">Join us!</a>
         </header>
         <!--Header end-->
+        <!-- MAIN START -->
+        <main>
+            <!-- LEFTH START -->
+            <section class="lefth">
+                <section class="summary">
+
+                </section>
+                <section class="faq">
+
+                </section>
+                <section class="contact">
+
+                </section>
+            </section>
+            <!-- LEFTH END -->
+            <!-- RIGTH START -->
+            <section class="rigth">
+                <section class="links">
+                    <aside id="brasil">
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>
+                                <h5></h5>
+                                <a href=""></a>
+                            </figcaption>
+                        </figure>
+                    </aside>
+                    <aside id="korea">
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>
+                                <h5></h5>
+                                <a href=""></a>
+                            </figcaption>
+                        </figure>
+                    </aside>
+                    <aside id="colombia">
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>
+                                <h5></h5>
+                                <a href=""></a>
+                            </figcaption>
+                        </figure>
+                    </aside>
+                </section>
+            </section>
+            <!-- RIGTH END -->
+        </main>
+        <!-- MAIN END -->
         <!-- FOOTER START -->
         <footer>
             <section>
